# tp3SO

./: CMakeLists.txt  config.json
include/: filesystem.h  json.h  pipes.h  prompt.h  shell.h
src/: filesystem.c  json.c  main.c  pipes.c  prompt.c  shell.c
tests/src/: test_json.c  test_shell.c
tp2SO/: CMakeLists.txt  Makefile  metrics
tp2SO/include/: expose_metrics.h  getinfojson.h  metrics.h
tp2SO/lib/prometheus-client-c/prom/include/: prom.h
tp2SO/lib/prometheus-client-c/prom/src/: prom_collector.c  prom_histogram.c
tp2SO/lib/prometheus-client-c/promhttp/src/: promhttp.c
tp2SO/src/: expose_metrics.c  getinfojson.c  main.c  metrics.c
